// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: TextButton should default to standard variant 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 28px;
  position: relative;
  border: none;
  padding: 4px;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  box-sizing: border-box;
  color: hsl(200,96%,11%);
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus::after {
  content: '';
  display: block;
  box-sizing: border-box;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
  border: 2px solid hsl(200,96%,35%);
  border-radius: 20px;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
  margin-right: 4px;
}

<button
    class="c0"
    type="button"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`component: TextButton should render a disabled text+icon button 1`] = `
<DocumentFragment>
  .c1 {
  vertical-align: middle;
}

.c0 {
  font-size: 18px;
  line-height: 28px;
  position: relative;
  border: none;
  padding: 4px;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  box-sizing: border-box;
  color: hsl(200,96%,11%);
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus::after {
  content: '';
  display: block;
  box-sizing: border-box;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
  border: 2px solid hsl(200,96%,35%);
  border-radius: 20px;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
  margin-right: 4px;
}

<button
    class="c0"
    type="button"
  >
    <svg
      class="c1"
      fill="currentcolor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M9.81384674,19.7396292 C9.5249491,19.7396292 9.24415138,19.6325301 9.02725315,19.4381317 L3.38789908,14.3504731 C2.906403,13.9166766 2.86770331,13.1741827 3.30239977,12.6926866 C3.73619624,12.2120905 4.47869019,12.1724908 4.96018627,12.6071873 L9.67974783,16.8641526 L18.9127726,5.4369457 C19.3204693,4.93204981 20.0593633,4.85285046 20.5642592,5.26144713 C21.0682551,5.66914381 21.1465544,6.40803779 20.7388578,6.91293368 L10.7273393,19.3040328 C10.524841,19.5542307 10.2269434,19.7108295 9.90654599,19.7369292 C9.87504624,19.7387292 9.84444649,19.7396292 9.81384674,19.7396292"
      />
    </svg>
    Check check
  </button>
</DocumentFragment>
`;

exports[`component: TextButton should render a text+icon button 1`] = `
<DocumentFragment>
  .c1 {
  vertical-align: middle;
}

.c0 {
  font-size: 18px;
  line-height: 28px;
  position: relative;
  border: none;
  padding: 4px;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  box-sizing: border-box;
  color: hsl(200,96%,11%);
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus::after {
  content: '';
  display: block;
  box-sizing: border-box;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
  border: 2px solid hsl(200,96%,35%);
  border-radius: 20px;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
  margin-right: 4px;
}

<button
    class="c0"
    type="button"
  >
    <svg
      class="c1"
      fill="currentcolor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M9.81384674,19.7396292 C9.5249491,19.7396292 9.24415138,19.6325301 9.02725315,19.4381317 L3.38789908,14.3504731 C2.906403,13.9166766 2.86770331,13.1741827 3.30239977,12.6926866 C3.73619624,12.2120905 4.47869019,12.1724908 4.96018627,12.6071873 L9.67974783,16.8641526 L18.9127726,5.4369457 C19.3204693,4.93204981 20.0593633,4.85285046 20.5642592,5.26144713 C21.0682551,5.66914381 21.1465544,6.40803779 20.7388578,6.91293368 L10.7273393,19.3040328 C10.524841,19.5542307 10.2269434,19.7108295 9.90654599,19.7369292 C9.87504624,19.7387292 9.84444649,19.7396292 9.81384674,19.7396292"
      />
    </svg>
    Check check
  </button>
</DocumentFragment>
`;

exports[`component: TextButton should render call to action variant 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 28px;
  position: relative;
  border: none;
  padding: 4px;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  box-sizing: border-box;
  color: hsl(200,96%,35%);
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus::after {
  content: '';
  display: block;
  box-sizing: border-box;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
  border: 2px solid hsl(200,96%,35%);
  border-radius: 20px;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
  margin-right: 4px;
}

<button
    class="c0"
    type="button"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`component: TextButton should render danger variant 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 28px;
  position: relative;
  border: none;
  padding: 4px;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  box-sizing: border-box;
  color: hsl(353,84%,44%);
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus::after {
  content: '';
  display: block;
  box-sizing: border-box;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
  border: 2px solid hsl(200,96%,35%);
  border-radius: 20px;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
  margin-right: 4px;
}

<button
    class="c0"
    type="button"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`component: TextButton should render disabled variant 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 28px;
  position: relative;
  border: none;
  padding: 4px;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  box-sizing: border-box;
  color: hsl(0,0%,70%);
  cursor: not-allowed;
}

.c0:focus::after {
  content: '';
  display: block;
  box-sizing: border-box;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
  border: 2px solid hsl(200,96%,35%);
  border-radius: 20px;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
  margin-right: 4px;
}

<button
    class="c0"
    disabled=""
    type="button"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`component: TextButton should render inverse call to action variant 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 28px;
  position: relative;
  border: none;
  padding: 4px;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  box-sizing: border-box;
  font-weight: 700;
  color: hsl(200,96%,35%);
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus::after {
  content: '';
  display: block;
  box-sizing: border-box;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
  border: 2px solid hsl(200,96%,35%);
  border-radius: 20px;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
  margin-right: 4px;
}

<button
    class="c0"
    type="button"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`component: TextButton should render inverse disabled variant 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 28px;
  position: relative;
  border: none;
  padding: 4px;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  box-sizing: border-box;
  color: hsl(0,0%,70%);
  cursor: not-allowed;
}

.c0:focus::after {
  content: '';
  display: block;
  box-sizing: border-box;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
  border: 2px solid hsl(200,96%,35%);
  border-radius: 20px;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
  margin-right: 4px;
}

<button
    class="c0"
    disabled=""
    type="button"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`component: TextButton should render inverse standard variant 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 28px;
  position: relative;
  border: none;
  padding: 4px;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  box-sizing: border-box;
  color: hsl(0,0%,100%);
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus::after {
  content: '';
  display: block;
  box-sizing: border-box;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
  border: 2px solid hsl(200,96%,35%);
  border-radius: 20px;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
  margin-right: 4px;
}

<button
    class="c0"
    type="button"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`component: TextButton should render standard variant 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 28px;
  position: relative;
  border: none;
  padding: 4px;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  box-sizing: border-box;
  color: hsl(200,96%,11%);
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus::after {
  content: '';
  display: block;
  box-sizing: border-box;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
  border: 2px solid hsl(200,96%,35%);
  border-radius: 20px;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
  margin-right: 4px;
}

<button
    class="c0"
    type="button"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`component: TextButton should support space props 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 28px;
  position: relative;
  border: none;
  padding: 4px;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  box-sizing: border-box;
  color: hsl(200,96%,11%);
  margin-right: 24px;
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus::after {
  content: '';
  display: block;
  box-sizing: border-box;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
  border: 2px solid hsl(200,96%,35%);
  border-radius: 20px;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
  margin-right: 4px;
}

<button
    class="c0"
    type="button"
  >
    I have margins!
  </button>
</DocumentFragment>
`;
